fixed modal overflow

--- a/css/main.css
+++ b/css/main.css
@@ -1181,6 +1181,12 @@ img {
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
 }
+@media screen and (max-height: 600px) {
+  .modal {
+    top: 50vw;
+    left: 50vw;
+  }
+}
 @media screen and (max-width: 479px) {
   .modal {
     width: 320px;
@@ -1190,13 +1196,11 @@ img {
 @media screen and (min-width: 480px) and (max-width: 1199px) {
   .modal {
     width: 450px;
-    height: 609px;
   }
 }
 @media screen and (min-width: 1200px) {
   .modal {
     width: 528px;
-    height: 581px;
   }
 }
 
