--- a/sass/components/modal/_modal-box.scss
+++ b/sass/components/modal/_modal-box.scss
@@ -20,18 +20,20 @@
     position: absolute;
     top: 50%;
     left: 50%;
+    @media screen and (max-height: 600px) {
+            top: 50vw;
+            left: 50vw;
+        }
     @media screen and (max-width: 479px) {
-            width: 320px;
-            height: auto;
+    width: 320px;
+    height: auto;
         }
     @media screen and (min-width: 480px) and (max-width: 1199px) {
     width: 450px;
-    height: 609px;
     }
-        @media screen and (min-width: 1200px) {
-            width: 528px;
-            height: 581px;
-        }
+    @media screen and (min-width: 1200px) {
+    width: 528px;
+    }
     transform: translate(-50%, -50%) scale(1);
     transition: transform 250ms $timing-function;
 
